@@ -1,3 +1,13 @@
+2001-10-14  Kevin Vandersloot <kfv101@psu.edu>
+
+	* interface.c: remove the free space column in the disk
+	list and make the mount directory column the second
+	column. Hopefully makes the list a little easier to digest.
+
+	* callbacks.c: make the size string show 1 decimal for
+	GB sizes and no decimal for MB sizes as it aids the display
+	of the sizes
+
 2001-09-25  Kevin Vandersloot <kfv101@psu.edu>
 
 	* release 0.10.3
